--- a/door/app/CMakeLists.txt
+++ b/door/app/CMakeLists.txt
@@ -1,18 +1,16 @@
-set(_target "door.bin")
+set(_target "app")
 
-set(_source_files   "main_swc.c")
+set(_source_files   "diag_swc.c")
 
-
-set(_include_dir      )
+set(_include_dir      
+   )
 
 # Public headers 
-set (_public_headers )
+set (_public_headers ".")
 
+set (_depend_libs)
 
-set (_depend_libs   "pthread"
-                    "rte")
-
-add_executable(${_target}
+add_library(${_target}
   ${_source_files}
 )
 
@@ -20,10 +18,9 @@ target_link_libraries(${_target}
   ${_depend_libs}
 )
 
-#Public headers for the project
 target_include_directories( ${_target} 
-  PRIVATE ${_include_dir}
-  PUBLIC  ${_public_headers})
+	PRIVATE ${_include_dir}
+	PUBLIC  ${_public_headers})
 
 # copy the binary files in the install directory
 install(
