remove debouncing and Nvm Writing

--- a/door/bsw/CMakeLists.txt
+++ b/door/bsw/CMakeLists.txt
@@ -2,8 +2,7 @@ set(_target "bsw")
 
 set(_source_files   "Comm.c"
                     "Dem.c"
-                    "Dcm.c"
-                    "Nvm.c")
+                    "Dcm.c")
 
 set(_include_dir      
    )
